# tsumugi

./: .aider.conf.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  GEMINI.md  Makefile  README.md  SECURITY.md  biome.json  compose.yaml  package.json  pnpm-lock.yaml
.cursor/rules/: 00-project.mdc
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: MediaLibrary.tsx  PreviewPanel.tsx  SplitPane.tsx  TimelinePanel.tsx  Toolbar.tsx
apps/desktop/src/hooks/: use-keyboard-shortcuts.ts
apps/desktop/src/store/: api.ts  timeline-store.ts
apps/mcp-server/: package.json  tsconfig.json
apps/mcp-server/src/: index.ts
crates/compositor/: Cargo.toml
crates/compositor/src/: context.rs  error.rs  lib.rs
crates/media-io/: Cargo.toml
crates/media-io/src/: concat.rs  error.rs  export.rs  lib.rs  model.rs  probe.rs
crates/project-store/: Cargo.toml
crates/project-store/src/: error.rs  lib.rs  schema.rs
crates/project-store/tests/: schema_test.rs
crates/timeline-engine/: Cargo.toml
crates/timeline-engine/src/: error.rs  history.rs  lib.rs  model.rs  ops.rs
crates/timeline-engine/tests/: history_test.rs  ops_test.rs
crates/transcribe/: Cargo.toml
crates/transcribe/src/: error.rs  lib.rs
crates/tsumugi-core/: Cargo.toml
crates/tsumugi-core/src/: lib.rs
docs/: agent-instructions.md  architecture.md
docs/adr/: 0001-tauri-framework.md
