[workspace]
resolver = "2"
members = ["apps/desktop/src-tauri"]
# "crates/*" will be added when the first crate is created

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sotanengel/tsumugi"
rust-version = "1.77.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
wgpu = "23"
