[package]
name = "compositor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GPU-accelerated video compositing for Tsumugi using wgpu"

[dependencies]
wgpu = { workspace = true }
thiserror = { workspace = true }
