[package]
name = "transcribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Speech-to-text transcription for Tsumugi (whisper.cpp, Phase 2)"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
