[package]
name = "tsumugi-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
timeline-engine = { path = "../../../crates/timeline-engine" }
media-io = { path = "../../../crates/media-io" }
uuid = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
